# nacos-adapter-demo-on-aws-lambda

./: .gitignore  Cargo.toml  Makefile  README.md  template.yml
examples/perf-efs/: README.md  template.yml
examples/simple-java/: README.md  template-efs-sync.yml  template-efs.yaml  template-efs.yml  template-passthrough-sync.yml  template-passthrough.yml  template-proxy.yml  template.yaml
examples/simple-java/HelloWorldFunction/: pom.xml
examples/simple-java/HelloWorldFunction/src/main/java/helloworld/: App.java
examples/simple-java/HelloWorldFunction/src/main/resources/: run.sh
examples/simple-read/: template.yml
examples/springboot-lwa/: .gitignore  README.md  template-efs-sync.yml  template-efs.yml  template-passthrough-sync.yml  template-passthrough.yml  template-proxy.yml
examples/springboot-lwa/app/: pom.xml
examples/springboot-lwa/app/src/main/java/com/amazonaws/demo/config/: NacosConfigApplication.java
examples/springboot-lwa/app/src/main/java/com/amazonaws/demo/config/controller/: ConfigController.java
examples/springboot-lwa/app/src/main/resources/: run.sh
scripts/: lambda-adapter  proxy-entry-lwa.sh  proxy-entry.sh  sync-entry-lwa.sh  sync-entry.sh
src/: cache.rs  config.rs  constant.rs  grpc.rs  http.rs  main.rs  nacos.rs
src/config/: fs.rs  mod.rs  passthrough.rs  provider.rs  proxy.rs  target.rs
src/grpc/: api_model.rs  mod.rs  nacos_proto.rs  server.rs  utils.rs
