[package]
name = "aws-lambda-nacos-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
lambda-extension = "0.11.0"
serde = "1"
serde_json = "1"
moka = { version = "0.12", features = ["future"] }
md5 = "0.7.0"
reqwest = "0.12.7"
