[package]
name = "aws-lambda-nacos-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
lambda-extension = "0.11.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
moka = { version = "0.12", features = ["future"] }
md5 = "0.7.0"
# disable default features to avoid linking musl openssl
reqwest = { version = "0.12.7", default-features = false }
futures = "0.3.30"
urlencoding = "2.1.3"
tonic = "0.4"
prost = "0.7"
lazy_static = "1.5.0"
anyhow = "1.0.88"
tokio-stream = "0.1.16"
